--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Data files
+pepe_semantics/features/
+pepe_semantics/index/
+pepe_semantics/model/bertweet_weights.pth
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
