gcp cleanup for deployment(#5)
* Use paths from config and useless comments removed

* Use Path instead of manual location. Full features Path added

* Full features path added

* utils removed. Not needed

* .gitignore inside model directory removed

* Added comment for full features file

* Cosmetic changes

* Added data folders to gitignore

* Clean Dockerfile

* dockerignore and gcloudignore added

* Bash script for deploying to gcp added

* Cleaner version

* Adding data files to gitignore

* Modifications for improved pip install flow

* Removing gitignore and additional comments to download data

* Hardcoding path

* Modifications for local download

* Using path from config.py

* Clearner version

* Bash script for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Data files
+src/pepe_semantics/features/
+src/pepe_semantics/index/
+src/pepe_semantics/model/bertweet_weights.pth
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
